--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -10,6 +10,8 @@ html,body{
     align-items: center;
     height: 100vh;
     cursor: none;
+    color: #fff;
+    font-weight: 300;
 }
 
 // plugin level css
@@ -24,20 +26,21 @@ main h1{
     font-weight: 300;
     flex: 0 0 45%;
     margin-top: 45px;
+    font-size: 24px;
 }
 main img {
     width:52%;
 }
-nav {
+.nav-list {
     flex:0 0 50%;
     display:flex;
     flex-direction: column;
     align-items: flex-start;
     margin-left: 40px;
 }
-nav h3 {
-    color: #fff;
+.nav-list h3 {
     font-weight: 300;
+    font-size: 16px;
 }
 .shows-category {
     padding: 0px;
@@ -57,4 +60,29 @@ nav h3 {
 }
 .is-focus {
     border: 2px solid #fff;
+}
+.nav-details {
+    display: flex;
+    align-self: flex-start;
+    margin-left: 45px;
+}
+.nav-details ul {
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    font-size: 20px;
+}
+.nav-details ul li {
+    display: block;
+    margin: 15px;
+    padding: 5px 0px 5px 10px;
+    width: 180%;
+}
+.details-header {
+    display: flex;
+    flex: 0 0 45%;
+    align-items: baseline;
+}
+.details-header span {
+    margin-left: 10px;
 }
