--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,17 +1,18 @@
-// global styles
+$font-weight: 100;
+$color-white: #fff;
 html,body{
     margin: 0;
     padding: 0;
     font-size: 14px;
-    font-family: sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     background-color: #000;
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100vh;
     cursor: none;
-    color: #fff;
-    font-weight: 300;
+    color: $color-white;
+    font-weight: $font-weight;
 }
 
 // plugin level css
@@ -20,69 +21,69 @@ main {
     justify-content: flex-end;
     align-items: end;
     width: 100vw;
+    h1{
+        color:#fff;
+        flex: 0 0 45%;
+        margin-top: 45px;
+        font-weight: $font-weight;
+    }
+    img {
+        width:52%;
+    }
 }
-main h1{
-    color:#fff;
-    font-weight: 300;
-    flex: 0 0 45%;
-    margin-top: 45px;
-    font-size: 24px;
-}
-main img {
-    width:52%;
-}
+
 .nav-list {
     flex:0 0 50%;
     display:flex;
     flex-direction: column;
     align-items: flex-start;
     margin-left: 40px;
-}
-.nav-list h3 {
-    font-weight: 300;
-    font-size: 16px;
+    h3 {
+        font-size: 16px;
+        font-weight: $font-weight;
+    }
 }
 .shows-category {
     padding: 0px;
     margin: 0px;
     overflow: hidden;
     height: 50%; 
-}
-.shows-category li{
-   display: inline-block;
-   list-style: none;
-   padding:0px 14px 10px 0px;
-   transition: marginLeft 1s ease-in-out;
-}
-.shows-category li img {
-    width: 85%;
-    box-sizing: border-box;
+    li{
+        display: inline-block;
+        list-style: none;
+        padding:0px 14px 10px 0px;
+        transition: marginLeft 1s ease-in-out;
+        img {
+            width: 85%;
+            box-sizing: border-box;
+        }
+     }
 }
 .is-focus {
-    border: 2px solid #fff;
+    border: 2px solid $color-white;
 }
 .nav-details {
     display: flex;
     align-self: flex-start;
     margin-left: 45px;
-}
-.nav-details ul {
-    margin: 0px;
-    padding: 0px;
-    list-style: none;
-    font-size: 20px;
-}
-.nav-details ul li {
-    display: block;
-    margin: 15px;
-    padding: 5px 0px 5px 10px;
-    width: 180%;
+    ul {
+        margin: 0px;
+        padding: 0px;
+        list-style: none;
+        font-size: 20px;
+        li {
+            display: block;
+            margin: 15px;
+            padding: 5px 0px 5px 10px;
+            width: 180%;
+        }
+    }
 }
 .details-header {
     display: flex;
     flex: 0 0 45%;
     align-items: baseline;
-}
-.details-header span {
-    margin-left: 10px;
+    span {
+        margin-left: 10px;
+    }
 }
